--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <header>
-    <a href="index.html">Strona główna</a>
+    <a href="index.html">Strona główna WTF</a>
     <a href="nauka-css.html">Nauka CSS</a>
 </header>
 
