--- a/nauka-css.html
+++ b/nauka-css.html
@@ -18,7 +18,7 @@
     <main>
         <h1>Nauka CSS</h1>
         <p>
-            To jest moja nauka.
+            To jest moja nauka frontendu.
         </p>
     </main>
 </body>
